vrios-cambio toda la estructura del juego

--- a/juegos.html
+++ b/juegos.html
@@ -56,7 +56,7 @@
                 <p>Divierte en el crushing de las señales de tránsito como si fueran los caramelos para ganar puntos
                     mientras aprendes. </p>
                 <img src="img/crushImage.png" alt="Señales Crush">
-                <a href="crush/index.html" class="play-button">Jugar <br> Señales Crush</a>
+                <a href="candyCrush/index.html" class="play-button">Jugar <br> Señales Crush</a>
             </div>
             <div class="game-container">
                 <h2 class="eduvial_tittle">Ahorcado Vial</h2>
