--- a/juegos.html
+++ b/juegos.html
@@ -29,7 +29,7 @@
             <div class="navbar_items">
                 <a class="navbar_item" href="index.html">Inicio</a>
                 <a class="navbar_item" href="quienes_somos.html">¿Quiénes somos?</a>
-                <a class="navbar_item" href="#">Avances</a>
+                <a class="navbar_item" href="avances.html">Avances</a>
                 <a class="navbar_item" href="juegos.html">Juegos</a>
             </div>
 
@@ -83,8 +83,8 @@
             </div>
 
             <div class="game-container">
-                <h2 class="eduvial_tittle">juego 4</h2>
-                <p>descripcion</p>
+                <h2 class="eduvial_tittle">Preguntados</h2>
+                <p>Un juego por tiempo para divertirse y aprender sobre preguntas e imagenes de tránsito.</p>
                 <img src="imagen4.jpg" alt="Juego 4">
                 <div class="btn_wrapper">
                     <a href="tetris.html" class="play-button">Jugar <br> Tetris</a>
