--- a/sitemap.html
+++ b/sitemap.html
@@ -26,7 +26,7 @@
             <div class="navbar_items">
                 <a class="navbar_item" href="index.html">Inicio</a>
                 <a class="navbar_item" href="quienes_somos.html">¿Quiénes somos?</a>
-                <a class="navbar_item" href="#">Avances</a>
+                <a class="navbar_item" href="avances.html">Avances</a>
                 <a class="navbar_item" href="juegos.html">Juegos</a>
             </div>
 
