--- a/avances.html
+++ b/avances.html
@@ -78,10 +78,10 @@
                 </div>
                 
                 <h2 class="secondary_title">Wireframe</h2>
-                <p class="description"><a class="description" target="_blank" href="https://design.penpot.app/#/view/ee63301e-1fa7-81b1-8004-63e9eb44ec44?page-id=ee63301e-1fa7-81b1-8004-63e9eb44ec45&section=interactions&index=0&share-id=ee63301e-1fa7-81b1-8004-653fefc6e5f4">Enlace al wireframe en PENPOT</a></p>
+                <p class="description"><a class="description enlace" target="_blank" href="https://design.penpot.app/#/view/ee63301e-1fa7-81b1-8004-63e9eb44ec44?page-id=ee63301e-1fa7-81b1-8004-63e9eb44ec45&section=interactions&index=0&share-id=ee63301e-1fa7-81b1-8004-653fefc6e5f4">Enlace al wireframe en PENPOT</a></p>
 
                 <h2 class="secondary_title">Github</h2>
-                <p class="description"><a class="description" target="_blank" href="https://github.com/Valkyries12/Proyecto_Eduvial.git">Enlace al repositorio en Github</a></p>
+                <p class="description"><a class="description enlace" target="_blank" href="https://github.com/Valkyries12/Proyecto_Eduvial.git">Enlace al repositorio en Github</a></p>
             </section>
             <br>
             <br>
@@ -91,7 +91,7 @@
         <footer class="footer">
             <nav class="footer_nav">
                 <a href="quienes_somos.html">¿Quienes somos?</a>
-                <a href="#">Avances</a>
+                <a href="avances.html">Avances</a>
                 <a href="juegos.html">Juegos</a>
             </nav>
     
