--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer class="footer">
         <nav class="footer_nav">
             <a href="quienes_somos.html">¿Quienes somos?</a>
-            <a href="#">Avances</a>
+            <a href="avances.html">Avances</a>
             <a href="juegos.html">Juegos</a>
         </nav>
 
