--- a/preguntados/index.html
+++ b/preguntados/index.html
@@ -10,7 +10,7 @@
     <div id="home-container">
         <h1>Bienvenido al Juego de Preguntados</h1>
         <button id="start-button" class="btnPrincipal">Comenzar Juego</button>
-        <a class="btnPrincipal" href="../index.html">EduVial</a>
+        <a class="btnPrincipal" href="../juegos.html">EduVial</a>
     </div>
     <div id="game-container" class="hidden">
         <div id="header">
