--- a/candyCrush/index.html
+++ b/candyCrush/index.html
@@ -22,6 +22,7 @@
 		<script src="board.js"></script>
 		<script src="rules.js"></script>
 		<script src="handler.js"></script>
+		<script src="scoreNotifier.js" type="module"></script>
 	</head>
 
 	<body>
@@ -36,14 +37,18 @@
 				</div>
 				<div class="col-md-3" id="lastColumn"></div>				
 			</div>
-			<div class="score-board">
-				<h3>Puntaje</h3>
-				<h1 id="score">0</h1>
-			</div>
-			<div> 
-				<a href="../juegos.html" class="return-button">Volver a Juegos</a>
-			</div>
+
 
 		</div> 	
+
+		<div class="score-board">
+			<h3>Puntaje</h3>
+			<h1 id="scoreLabel">0</h1>
+		</div>
+		<div> 
+			<a href="../juegos.html" class="return-button">Volver a Juegos</a>
+		</div>
+
 	</body>
+
 </html>
