Aumento de tiempo Preguntados
Se aumenta el tiempo de 60 a 120 segundos para contestar.
Se mejora la vista en celulares del juego.

--- a/sitemap.html
+++ b/sitemap.html
@@ -58,6 +58,7 @@
             <p class="description">- Memorama</p>
             <p class="description">- Señales Crush</p>
             <p class="description">- Ahorcado</p>
+            <p class="description">- Preguntados</p>
         </section>
     </main>
 
