--- a/candyCrush/index.html
+++ b/candyCrush/index.html
@@ -35,7 +35,7 @@
 					<canvas id="canvas" width="320" height="320">
 					</canvas>
 				</div>
-				<div class="col-md-3" id="lastColumn"></div>				
+				<!--<div class="col-md-3" id="lastColumn"></div>-->				
 			</div>
 
 
