--- a/candyCrush/index.html
+++ b/candyCrush/index.html
@@ -5,7 +5,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>Candy Crush</title>
+		<title>Señales Crush</title>
 		
 		<!-- Load style sheets -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
