Se corrige bug de popup instrucciones al presionar jugar juego

--- a/juegos.html
+++ b/juegos.html
@@ -55,7 +55,7 @@
                 <img src="img/juego_memorama.png" alt="Memorama">
                 <div class="btn_wrapper">
                     <a href="memorama/index.html" class="play-button">Jugar <br> Memorama</a>
-                    <button id="memorama-btn" class="play-button">Instrucciones</button>
+                    <button id="memorama-btn" class="play-button instrucciones">Instrucciones</button>
                 </div>
             </div>
 
@@ -66,7 +66,7 @@
                 <img src="img/crushImage.png" alt="Señales Crush">
                 <div class="btn_wrapper">
                     <a href="candyCrush/index.html" class="play-button">Jugar <br> Señales Crush</a>
-                    <button id="crush-btn" class="play-button">Instrucciones</button>
+                    <button id="crush-btn" class="play-button instrucciones">Instrucciones</button>
                 </div>
             </div>
 
@@ -81,7 +81,7 @@
                 <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
                 <div class="btn_wrapper">
                     <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
-                    <button id="ahorcado-btn" class="play-button">Instrucciones</button>
+                    <button id="ahorcado-btn" class="play-button instrucciones">Instrucciones</button>
                 </div>
                 
             </div>
@@ -92,7 +92,7 @@
                 <img src="img/juego_preguntados.png" alt="Preguntados">
                 <div class="btn_wrapper">
                     <a href="preguntados/index.html" class="play-button">Jugar <br> Preguntados</a>
-                    <button id="preguntados-btn" class="play-button">Instrucciones</button>
+                    <button id="preguntados-btn" class="play-button instrucciones">Instrucciones</button>
                 </div>
            
             </div>
