--- a/juegos.html
+++ b/juegos.html
@@ -88,7 +88,10 @@
 
             <div class="game-container">
                 <h2 class="eduvial_tittle">Preguntados</h2>
-                <p>Un juego por tiempo para divertirse y aprender sobre preguntas e imagenes de tránsito.</p>
+                <p>¡Bienvenido al juego definitivo de preguntas! Donde pondrás a prueba tus conocimientos sobre educación vial.
+                   ¿Crees saber todo sobre las normas de tránsito y sus señales? Demuéstralo contestando la mayor cantidad 
+                   de preguntas que puedas antes de que termine el tiempo.
+                </p>
                 <img src="img/juego_preguntados.png" alt="Preguntados">
                 <div class="btn_wrapper">
                     <a href="preguntados/index.html" class="play-button">Jugar <br> Preguntados</a>
