Botón Volver a Juegos
Se agrega botón Volver a Juegos.

--- a/ahorcado/index.html
+++ b/ahorcado/index.html
@@ -21,6 +21,9 @@
         <div class="ahorcado-box">
             <img src="#" draggable="false" alt="ahorcado-img">
             <h1>Ahorcado EduVial</h1>
+            <div class="button-container">
+                <a href="../juegos.html" class="return-button">Volver a Juegos</a>
+            </div>
         </div>
         <div class="game-box">
             <ul class="word-display"></ul>
