Se agrega boton atras en ahorcado

--- a/ahorcado/index.html
+++ b/ahorcado/index.html
@@ -29,5 +29,7 @@
             <div class="keyboard"></div>
         </div>
     </div>
+    <button class="btn"><a href="../juegos.html">Volver a juegos</a></button>
+
 </body>
 </html>
