Se agrega boton volver a juegos

--- a/juegos.html
+++ b/juegos.html
@@ -78,7 +78,7 @@
                     ayuda a los jugadores a familiarizarse con estos conceptos mientras se divierten.
                 </p>
                 
-                <img src="img/juego_ahorcado2.PNG" alt="Ahorcado Vial">
+                <img src="img/juego_ahorcado.PNG" alt="Ahorcado Vial">
                 <div class="btn_wrapper">
                     <a href="ahorcado/index.html" class="play-button">Jugar <br>Ahorcado</a>
                     <button id="ahorcado-btn" class="play-button instrucciones">Instrucciones</button>
