--- a/preguntados/index.html
+++ b/preguntados/index.html
@@ -16,8 +16,8 @@
         <div id="header">
             <div id="score">Aciertos: 0/0</div>
             <div id="timer">Tiempo: 120s</div>
-            <div id="lifeline-container">
-                <button id="lifeline-button" class="btnPrincipal">Comodín (3)</button>
+            <div id="comodin-container">
+                <button id="comodin-button" class="btnPrincipal">Comodín (3)</button>
             </div>
         </div>
         <div id="question-container">
