--- a/juegos.html
+++ b/juegos.html
@@ -65,7 +65,7 @@
                     mientras aprendes. </p>
                 <img src="img/crushImage.png" alt="Señales Crush">
                 <div class="btn_wrapper">
-                    <a href="candyCrush/index.html" class="play-button">Jugar <br> Señales Crush</a>
+                    <a href="candyCrush/instrucciones.html" class="play-button">Jugar <br> Señales Crush</a>
                     <button id="crush-btn" class="play-button instrucciones">Instrucciones</button>
                 </div>
             </div>
